Updates from Overleaf

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -110,7 +110,7 @@ Recently, scholars have argued that polycentric approaches provide a better \tex
 
 Despite the potential advantages of polycentric arrangements, two challenges may undermine their efficiency and popular support. First, polycentric systems demand constant civic participation at multiple government levels. Because climate change has diffuse benefits but concentrated costs, individuals have few incentives to join collective efforts \citep{barrett2003increasing, heitzig2011self, nordhaus2015climate}. Second, individuals tend to heavily discount climate change investments \citep{dasgupta2008discounting, nordhaus1997discounting}. Reducing carbon emissions requires significant expenditures today, yet the benefits of climate mitigation will arise only in a distant future. In that regard, citizens might prefer state-based initiatives to prevent climate change if private costs are too high or expected results too uncertain. 
 
-Voluntary environmental governance faces further difficulties in new democracies. In Latin America, authoritarian regimes discouraged civil participation and reduced social capital, two necessary conditions for effective polycentric arrangements \citep{aligica2014institutional,ostrom1990governing}. Top-down climate policies also create incentives for organised groups to collude with state officials and pursue private interests. As a result, elites and state representatives have \textit{de facto} veto power over environmental legislation and can override local decisions to their own benefit.
+Voluntary environmental governance faces further difficulties in new democracies. In Latin America, authoritarian regimes discouraged civil participation and reduced social capital, two necessary conditions for effective polycentric arrangements \citep{aligica2014institutional,ostrom1990governing}. Top-down climate policies also create incentives for organised groups to collude with state officials and pursue private interests \citep{aklin2013understanding,aklin2014blames}. As a result, elites and state representatives have \textit{de facto} veto power over environmental legislation and can override local decisions to their own benefit.
 
 We design an experiment to assess which climate change governance system Latin American elites are willing to support. In our survey, we asked 654 respondents -- academics, members of the executive power, legislators, businesspeople, and members of non-governmental organisations -- to select their preferred agreement in 7 randomised binary choices.
 
