--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -485,3 +485,24 @@ year = {2019}
   year={2019},
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
+
+@article{aklin2014blames,
+  title={{Who Blames Corruption for the Poor Enforcement of Environmental Laws? Survey Evidence from Brazil}},
+  author={Aklin, Micha{\"e}l and Bayer, Patrick and Harish, SP and Urpelainen, Johannes},
+  journal={Environmental Economics and Policy Studies},
+  volume={16},
+  number={3},
+  pages={241--262},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{aklin2013understanding,
+  title={{Understanding Environmental Policy Preferences: New Evidence from Brazil}},
+  author={Aklin, Micha{\"e}l and Bayer, Patrick and Harish, SP and Urpelainen, Johannes},
+  journal={Ecological Economics},
+  volume={94},
+  pages={28--36},
+  year={2013},
+  publisher={Elsevier}
+}
