--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,4 +1,190 @@
 %%% References
+@article{friman2015agreement,
+  title={{Agreement, Significance, and Understandings of Historical Responsibility in Climate Change Negotiations}},
+  author={Friman, Mathias and Hjerpe, Mattias},
+  journal={Climate Policy},
+  volume={15},
+  number={3},
+  pages={302--320},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{andonova2007transnational,
+  title={Transnational climate change governance},
+  author={Andonova, Liliana and Betsill, Michele and Bulkeley, Harriet},
+  booktitle={Amsterdam Conference on the Human Dimensions of Global Environmental Change},
+  pages={24--26},
+  year={2007},
+  organization={Citeseer}
+}
+
+@article{bohmelt2014civil,
+  title={Civil society participation in global governance: Insights from climate politics},
+  author={B{\"o}hmelt, Tobias and Koubi, Vally and Bernauer, Thomas},
+  journal={European Journal of Political Research},
+  volume={53},
+  number={1},
+  pages={18--36},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{hovi2019club,
+  title={{The Club Approach: A Gateway to Effective Climate Co-operation?}},
+  author={Hovi, Jon and Sprinz, Detlef F and S{\ae}len, H{\aa}kon and Underdal, Arild},
+  journal={British Journal of Political Science},
+  pages={1071--1096},
+	volume={49},
+	number={3},
+  year={2019},
+  publisher={Cambridge University Press}
+}
+
+@article{mildenberger2017beliefs,
+  title={{Beliefs about Climate Beliefs: The Importance of Second-Order Opinions for Climate Politics}},
+  author={Mildenberger, Matto and Tingley, Dustin},
+  journal={British Journal of Political Science},
+  pages={1--29},
+  year={2017},
+  publisher={Cambridge University Press}
+}
+
+@article{bernauer2013national,
+  title={{National Climate Policies in International Comparison: The Climate Change Cooperation Index}},
+  author={Bernauer, Thomas and B{\"o}hmelt, Tobias},
+  journal={Environmental Science \& Policy},
+  volume={25},
+  pages={196--206},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{keohane2016paris,
+  title={Paris: Beyond the climate dead end through pledge and review?},
+  author={Keohane, Robert O and Oppenheimer, Michael},
+  journal={Politics and Governance},
+  volume={4},
+  number={3},
+  pages={142--151},
+  year={2016}
+}
+
+@article{buntaine2018preferences,
+  title={{Preferences for Domestic Action over International Transfers in Global Climate Policy}},
+  author={Buntaine, Mark T and Prather, Lauren},
+  journal={Journal of Experimental Political Science},
+  volume={5},
+  number={2},
+  pages={73--87},
+  year={2018},
+  publisher={Cambridge University Press}
+}
+
+@article{gampfer2014obtaining,
+  title={Obtaining public support for North-South climate funding: Evidence from conjoint experiments in donor countries},
+  author={Gampfer, Robert and Bernauer, Thomas and Kachi, Aya},
+  journal={Global Environmental Change},
+  volume={29},
+  pages={118--126},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{bechtel2017interests,
+  title={{Interests, Norms and Support for the Provision of Global Public Goods: The Case of Climate Co-Operation}},
+  author={Bechtel, Michael M and Genovese, Federica and Scheve, Kenneth F},
+  journal={British journal of political science},
+  pages={1--23},
+  year={2017},
+  publisher={Cambridge University Press}
+}
+
+@article{beiser2019commitment,
+  title={{Commitment Failures are Unlikely to Undermine Public Support for the Paris Agreement}},
+  author={Beiser-McGrath, Liam F and Bernauer, Thomas},
+  journal={Nature climate change},
+  volume={9},
+  number={3},
+  pages={248},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@article{solt2016standardized,
+  title={The standardized world income inequality database},
+  author={Solt, Frederick},
+  journal={Social science quarterly},
+  volume={97},
+  number={5},
+  pages={1267--1281},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{muller2009differentiating,
+  title={{Differentiating (Historic) Responsibilities for Climate Change}},
+  author={M{\"u}ller, Benito and H{\"o}hne, Niklas and Ellermann, Christian},
+  journal={Climate Policy},
+  volume={9},
+  number={6},
+  pages={593--611},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+
+@book{wiarda2018concise,
+  title={A concise introduction to Latin American politics and development},
+  author={Wiarda, Howard J and Kline, Harvey F},
+  year={2018},
+  publisher={Routledge}
+}
+
+@article{tollefson2011green,
+  title={How green is my future? UN panel foresees big growth in renewable energy, but policies will dictate just how big},
+  author={Tollefson, Jeff},
+  journal={Nature},
+  volume={473},
+  number={7346},
+  pages={134--136},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@book{soifer2015state,
+  title={State Building in Latin America},
+  author={Soifer, Hillel David},
+  year={2015},
+  publisher={Cambridge University Press}
+}
+
+@article{hanegraaff2015transnational,
+  title={Transnational advocacy over time: business and NGO mobilization at UN climate summits},
+  author={Hanegraaff, Marcel},
+  journal={Global Environmental Politics},
+  volume={15},
+  number={1},
+  pages={83--104},
+  year={2015},
+  publisher={MIT Press}
+}
+
+@article{acemoglu2008persistence,
+  title={Persistence of power, elites, and institutions},
+  author={Acemoglu, Daron and Robinson, James A},
+  journal={American Economic Review},
+  volume={98},
+  number={1},
+  pages={267--93},
+  year={2008}
+}
+
+@book{eckstein2017global,
+  title={{Global Climate Risk Index 2018}},
+  author={Eckstein, David and K{\"u}nzel, Vera and Sch{\"a}fer, Laura},
+  year={2017},
+  publisher={Bonn: Germanwatch Nord-S{\"u}d Initiative eV}
+}
 
 @article{jordan2015emergence,
   title={{Emergence of Polycentric Climate Governance and Its Future Prospects}},
@@ -305,7 +491,7 @@
 }
 
 @article{bansak2016economic,
-  title={How economic, humanitarian, and religious concerns shape European attitudes toward asylum seekers},
+  title={{How Economic, Humanitarian, and Religious Concerns Shape European Attitudes toward Asylum Seekers}},
   author={Bansak, Kirk and Hainmueller, Jens and Hangartner, Dominik},
   journal={Science},
   volume={354},
@@ -506,3 +692,229 @@ year = {2019}
   year={2013},
   publisher={Elsevier}
 }
+
+@article{keohane2011regime,
+  title={{The Regime Complex for Climate Change}},
+  author={Keohane, Robert O and Victor, David G},
+  journal={Perspectives on politics},
+  volume={9},
+  number={1},
+  pages={7--23},
+  year={2011},
+  publisher={Cambridge University Press}
+}
+
+@article{von2008international,
+  title={{The International Law and Politics of Climate Change: Ratification of the United Nations Framework Convention and the Kyoto Protocol}},
+  author={Von Stein, Jana},
+  journal={Journal of Conflict Resolution},
+  volume={52},
+  number={2},
+  pages={243--268},
+  year={2008},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{beccherle2011regional,
+  title={Regional Initiatives and the Cost of Delaying Binding Climate Change Agreements},
+  author={Beccherle, Julien and Tirole, Jean},
+  journal={Journal of Public Economics},
+  volume={95},
+  number={11-12},
+  pages={1339--1348},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{brauninger2000making,
+  title={{Making Rules for Governing Global Commons: The Case of Deep-Sea Mining}},
+  author={Br{\"a}uninger, Thomas and K{\"o}nig, Thomas},
+  journal={Journal of Conflict Resolution},
+  volume={44},
+  number={5},
+  pages={604--629},
+  year={2000},
+  publisher={Sage Publications, Inc. 2455 Teller Road, Thousand Oaks, CA 91320}
+}
+
+@article{dubash2013developments,
+  title={{Developments in National Climate Change Mitigation Legislation and Strategy}},
+  author={Dubash, Navroz K and Hagemann, Markus and H{\"o}hne, Niklas and Upadhyaya, Prabhat},
+  journal={Climate Policy},
+  volume={13},
+  number={6},
+  pages={649--664},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{massey2014climate,
+  title={{Climate Policy Innovation: The Adoption and Diffusion of Adaptation Policies across Europe}},
+  author={Massey, Eric and Biesbroek, Robbert and Huitema, Dave and Jordan, Andy},
+  journal={Global Environmental Change},
+  volume={29},
+  pages={434--443},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{huntjens2012institutional,
+  title={{Institutional Design Propositions for the Governance of Adaptation to Climate Change in the Water Sector}},
+  author={Huntjens, Patrick and Lebel, Louis and Pahl-Wostl, Claudia and Camkin, Jeff and Schulze, Roland and Kranz, Nicole},
+  journal={Global Environmental Change},
+  volume={22},
+  number={1},
+  pages={67--81},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{barrett2008climate,
+  title={{Climate Treaties and the Imperative of Enforcement}},
+  author={Barrett, Scott},
+  journal={Oxford Review of Economic Policy},
+  volume={24},
+  number={2},
+  pages={239--258},
+  year={2008},
+  publisher={Oxford University Press}
+}
+
+@article{marcoux2009institutional,
+  title={{Institutional Flexibility in the Design of Multilateral Environmental Agreements}},
+  author={Marcoux, Christopher},
+  journal={Conflict Management and Peace Science},
+  volume={26},
+  number={2},
+  pages={209--228},
+  year={2009},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{copelovitch2014design,
+  title={{Design in Context: Existing International Agreements and New Cooperation}},
+  author={Copelovitch, Mark S and Putnam, Tonya L},
+  journal={International Organization},
+  volume={68},
+  number={2},
+  pages={471--493},
+  year={2014},
+  publisher={Cambridge University Press}
+}
+
+@article{bodin2017collaborative,
+  title={{Collaborative Environmental Governance: Achieving Collective Action in Social-Ecological Systems}},
+  author={Bodin, {\"O}rjan},
+  journal={Science},
+  volume={357},
+  number={6352},
+  pages={11--14},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{abbott2000hard,
+  title={{Hard and Soft Law in International Governance}},
+  author={Abbott, Kenneth W and Snidal, Duncan},
+  journal={International organization},
+  volume={54},
+  number={3},
+  pages={421--456},
+  year={2000},
+  publisher={Cambridge University Press}
+}
+
+@article{rosendorff2001optimal,
+  title={{The Optimal Design of International Trade Institutions: Uncertainty and Escape}},
+  author={Rosendorff, B Peter and Milner, Helen V},
+  journal={International Organization},
+  volume={55},
+  number={4},
+  pages={829--857},
+  year={2001},
+  publisher={Cambridge University Press}
+}
+
+@article{luna2005political,
+  title={{Political Representation in Latin America: A Study of Elite-Mass Congruence in Nine Countries}},
+  author={Luna, Juan P and Zechmeister, Elizabeth J},
+  journal={Comparative political studies},
+  volume={38},
+  number={4},
+  pages={388--416},
+  year={2005},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{albertson2015hearts,
+  title={Hearts or Minds? Identifying Persuasive Messages on Climate Change},
+  author={Albertson, Bethany and Busby, Joshua William},
+  journal={Research \& Politics},
+  volume={2},
+  number={1},
+  pages={2053168015577712},
+  year={2015},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{abbott2012transnational,
+  title={{The Transnational Regime Complex for Climate Change}},
+  author={Abbott, Kenneth W},
+  journal={Environment and Planning C: Government and Policy},
+  volume={30},
+  number={4},
+  pages={571--590},
+  year={2012},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{colgan2012punctuated,
+  title={{Punctuated Equilibrium in the Energy Regime Complex}},
+  author={Colgan, Jeff D and Keohane, Robert O and Van de Graaf, Thijs},
+  journal={The Review of International Organizations},
+  volume={7},
+  number={2},
+  pages={117--143},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{raustiala2004regime,
+  title={The Regime Complex for Plant Genetic Resources},
+  author={Raustiala, Kal and Victor, David G},
+  journal={International organization},
+  volume={58},
+  number={2},
+  pages={277--309},
+  year={2004},
+  publisher={Cambridge University Press}
+}
+@article{loewen2010help,
+  title={{Help Me Help You: Conducting Field Experiments with Political Elites}},
+  author={Loewen, Peter John and Rubenson, Daniel and Wantchekon, Leonard},
+  journal={The Annals of the American Academy of Political and Social Science},
+  volume={628},
+  number={1},
+  pages={165--175},
+  year={2010},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{karapin2012explaining,
+  title={{Explaining Success and Failure in Climate Policies: Developing Theory through German Case Studies}},
+  author={Karapin, Roger},
+  journal={Comparative Politics},
+  volume={45},
+  number={1},
+  pages={46--68},
+  year={2012},
+  publisher={City University of New York}
+}
+
+@book{jahn2016politics,
+  title={The Politics of Environmental Performance},
+  author={Jahn, Detlef},
+  year={2016},
+  publisher={Cambridge: Cambridge University Press}
+}
+
